# life_bevy

./: Cargo.toml  flake.nix  rust-toolchain.toml
assets/shaders/: bg.wgsl
src/: bg.rs  main.rs
