cargo-features = [ "codegen-backend" ]

[package]
name = "life"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking", "wayland"] }
bevy_pancam = "0.16.0"
hashbrown = "0.15.2"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }

[unstable]
codegen-backend = true

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

[target.x86_64-unkown-linux-gnu]
linker = "clang"
rustflags = ["-Zshare-generics=y", "-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
